fix (jurnal): perbaikan jurnal